# dbt-artifacts-parser

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTIONG.md  MANIFEST.in  Makefile  README.md  mise.toml  pylintrc  pyproject.toml  requirements.setup.txt  setup.py
.claude/: settings.json
.claude/hooks/: run-pre-commit.sh
.claude/skills/dbt-parser-refresh/: SKILL.md
.claude/skills/package-version-bump/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: contributors-list.yml  lint.yml  publish.yml  shift-left-security-scan.yml  test-publish.yml  test.yml
.todo_list/: dbt-parser-refresh.md
.trunk/: trunk.yaml
dbt_artifacts_parser/: __init__.py  parser.py  utils.py
dbt_artifacts_parser/parsers/: base.py  utils.py  version_map.py
dbt_artifacts_parser/parsers/catalog/: catalog_v1.py
dbt_artifacts_parser/parsers/manifest/: manifest_v1.py  manifest_v10.py  manifest_v11.py  manifest_v12.py  manifest_v2.py  manifest_v3.py  manifest_v4.py  manifest_v5.py  manifest_v6.py  manifest_v7.py  manifest_v8.py  manifest_v9.py
dbt_artifacts_parser/parsers/run_results/: run_results_v1.py  run_results_v2.py  run_results_v3.py  run_results_v4.py  run_results_v5.py  run_results_v6.py
dbt_artifacts_parser/parsers/semantic_manifest/: semantic_manifest_v1.py
dbt_artifacts_parser/parsers/sources/: sources_v1.py  sources_v2.py  sources_v3.py
dbt_artifacts_parser/resources/catalog/: catalog_v1.json
dbt_artifacts_parser/resources/manifest/: manifest_v1.json  manifest_v10.json  manifest_v11.json  manifest_v12.json  manifest_v2.json  manifest_v3.json  manifest_v4.json  manifest_v5.json  manifest_v6.json  manifest_v7.json  manifest_v8.json  manifest_v9.json
dbt_artifacts_parser/resources/run-results/: run-results_v1.json  run-results_v2.json  run-results_v3.json  run-results_v4.json  run-results_v5.json  run-results_v6.json
dbt_artifacts_parser/resources/sources/: sources_v1.json  sources_v2.json  sources_v3.json
dev/: _artifact_versions.sh  build.sh  clean.sh  download_dbt_schemas.sh  format_python.sh  generate_parser_classes.sh  inline_schema_ref.py  lint_python.sh  publish.sh  setup.sh  test_python.sh
dev/integration_tests/: verify_parsers.py
tests/: __init__.py  test_basic.py  test_parser.py  test_utils.py
tests/parsers/: __init__.py  test_utils.py
tests/resources/catalog/v1/jaffle_shop/: catalog.json  catalog_1.11.json
tests/resources/manifest/v11/jaffle_shop/: manifest.json
tests/resources/manifest/v12/jaffle_shop/: manifest_1.10.json  manifest_1.11.json  manifest_1.8.json
tests/resources/manifest/v8/jaffle_shop_at_1_4_3/: manifest.json
tests/resources/pubsub/: test_data.json  test_message.json
tests/resources/run_results/v6/jaffle_shop/: run_results.json  run_results_1.11.json
tests/resources/v1/jaffle_shop/: semantic_manifest.json
tests/resources/v12/jaffle_shop/: manifest.json  manifest_1.9.json
tests/resources/v2/jaffle_shop/: run_results.json
tests/resources/v3/jaffle_shop/: run_results.json
tests/resources/v4/jaffle_shop/: run_results.json
tests/resources/v5/jaffle_shop/: run_results.json
tests/resources/v6/jaffle_shop/: manifest.json  run_results.json
tests/resources/v7/jaffle_shop/: manifest.json
tests/resources/v8/jaffle_shop/: manifest.json
