[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "dbt_artifacts_parser"

[tool.flit.sdist]
exclude = [
    ".github/",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".style.yapf",
    ".pylintrc",
    ".pypirc",
    "Makefile",
    "dev/",
    "tests/",
]

[project]
name = "dbt-artifacts-parser"
authors = [{name = "yu-iskw"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version", "description"]
dependencies = [
    "pydantic >=2.0,<3.0",
]

[project.urls]
Home = "https://github.com/yu-iskw/dbt-artifacts-parser"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<9.0.0",
    "pylint >=2.12.0",
    "mypy ==1.10.0",
    "flake8 >=7.1.0,<8.0.0",
    "black ==24.4.2",
    "isort >=5.0.6,<6.0.0",
    "yapf >=0.29.0",
]
dev = [
    "flit ==3.9.0",
    "build ==1.2.1",
    "yapf >=0.29.0",
    "pyyaml >=5.3",
    "pdoc3 >=0.9.2",
    "pre-commit >=2.15.0",
    "datamodel-code-generator >=0.20,<0.30",
]

[tool.isort]
profile = "black"
