[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-artifacts-parser"
authors = [{name = "yu-iskw"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version"]
description = "A dbt artifacts parser in python"
dependencies = [
    "pydantic >=2.0,<3.0",
]

[project.urls]
Home = "https://github.com/yu-iskw/dbt-artifacts-parser"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<9.0.0",
]
dev = [
    "datamodel-code-generator>=0.30,<0.40",
    "build ==1.2.2",
    "pyyaml >=5.3",
    "pdoc3 >=0.9.2",
    "pre-commit >=2.15.0",
    "pylint >=2.12.0",
    "mypy ==1.15.0",
    "flake8 >=3.8.3,<8.0.0",
    "black ==24.8.0",
    "isort >=5.0.6,<7.0.0",
]

[tool.hatch.version]
path = "dbt_artifacts_parser/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".style.yapf",
    ".pylintrc",
    ".pypirc",
    "Makefile",
    "dev/",
    "tests/",
    ".DS_Store",
    ".vscode/",
    ".trunk/",
    ".pytest_cache/",
    ".mypy_cache/",
    "dist/",
    "test.json",
    "renovate.json"
]

[tool.isort]
profile = "black"
