[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-artifacts-parser"
authors = [{name = "yu-iskw"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = ["version"]
description = "A dbt artifacts parser in python"
dependencies = [
    "pydantic >=2.0,<3.0",
]

[project.urls]
Home = "https://github.com/yu-iskw/dbt-artifacts-parser"

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "datamodel-code-generator>=0.45.0",
    "mypy>=1.19.1",
    "pdoc3>=0.11.6",
    "pre-commit>=4.3.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.10",
]

[tool.hatch.version]
path = "dbt_artifacts_parser/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".style.yapf",
    ".pylintrc",
    ".pypirc",
    "Makefile",
    "dev/",
    "tests/",
    ".DS_Store",
    ".vscode/",
    ".trunk/",
    ".pytest_cache/",
    ".mypy_cache/",
    "dist/",
    "test.json",
    "renovate.json"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
